--- a/hangman.html
+++ b/hangman.html
@@ -2,6 +2,9 @@
 <html lang="en" ng-app="myapp">
 
 <head>
+
+  <meta charset="utf-8">
+
     <title>Words Will Kill You</title>
 
     <!--Angular CDN-->
@@ -9,14 +12,192 @@
 
     <link rel="stylesheet" type="text/css" href="hangman.css">
 
+
+<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/3.6.1/firebase-auth.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDOs7uiBS51OphmY75GL0fj8Lu2_2JSxDM",
+    authDomain: "final-creative-project.firebaseapp.com",
+    databaseURL: "https://final-creative-project.firebaseio.com",
+    storageBucket: "final-creative-project.appspot.com",
+    messagingSenderId: "746334017943"
+  };
+  firebase.initializeApp(config);
+
+</script>
+
+<script type="text/javascript">
+    /**
+     * Function called when clicking the Login/Logout button.
+     */
+    // [START buttoncallback]
+    function toggleSignIn() 
+    {
+      if (!firebase.auth().currentUser) 
+      {
+        // [START createprovider]
+        var provider = new firebase.auth.GithubAuthProvider();
+        // [END createprovider]
+        // [START addscopes]
+        provider.addScope('repo');
+        // [END addscopes]
+        // [START signin]
+        firebase.auth().signInWithRedirect(provider);
+        // [END signin]
+      } 
+
+      else 
+      {
+        // [START signout]
+        firebase.auth().signOut();
+        // [END signout]
+      }
+      // [START_EXCLUDE]
+      document.getElementById('quickstart-sign-in').disabled = true;
+      document.getElementById('reset_button').disabled = false;
+      document.getElementById('reset_button').textContent = 'Sign in to Play';
+      $(".letter_choice").hide();
+      $("#mystery_word").hide();
+      $("#noose").hide();
+      // [END_EXCLUDE]
+    }
+    // [END buttoncallback]
+
+
+    /**
+     * initApp handles setting up UI event listeners and registering Firebase auth listeners:
+     *  - firebase.auth().onAuthStateChanged: This listener is called when the user is signed in or
+     *    out, and that is where we update the UI.
+     *  - firebase.auth().getRedirectResult(): This promise completes when the user gets back from
+     *    the auth redirect flow. It is where you can get the OAuth access token from the IDP.
+     */
+    function initApp() 
+    {
+      // Result from Redirect auth flow.
+      // [START getidptoken]
+      firebase.auth().getRedirectResult().then(function(result) 
+      {
+        if (result.credential) 
+        {
+          // This gives you a GitHub Access Token. You can use it to access the GitHub API.
+            var token = result.credential.accessToken;
+          // [START_EXCLUDE]
+          //////////////////////////////////////////////////////////////////document.getElementById('quickstart-oauthtoken').textContent = token;
+        } 
+
+        else 
+        {
+            //document.getElementById('quickstart-oauthtoken').textContent = 'null';
+          // [END_EXCLUDE]
+        }
+        // The signed-in user info.
+        var user = result.user;
+      })
+      
+      .catch(function(error) 
+      {
+        // Handle Errors here.
+        var errorCode = error.code;
+        var errorMessage = error.message;
+        // The email of the user's account used.
+        var email = error.email;
+        // The firebase.auth.AuthCredential type that was used.
+        var credential = error.credential;
+        // [START_EXCLUDE]
+        if (errorCode === 'auth/account-exists-with-different-credential') 
+        {
+          alert('You have already signed up with a different auth provider for that email.');
+          // If you are using multiple auth providers on your app you should handle linking
+          // the user's accounts here.
+        } 
+        
+        else 
+        {
+          console.error(error);
+        }
+        // [END_EXCLUDE]
+
+        });
+      // [END getidptoken]
+
+      // Listening for auth state changes.
+      // [START authstatelistener]
+      firebase.auth().onAuthStateChanged(function(user) 
+      {
+        if (user) 
+        {
+          // User is signed in.
+          var displayName = user.displayName;
+          document.getElementById('player_name').textContent = displayName;
+          //var email = user.email;
+          //var emailVerified = user.emailVerified;
+          //var photoURL = user.photoURL;
+          //var isAnonymous = user.isAnonymous;
+          var uid = user.uid;
+          document.getElementById('player_name').textContent + ' (' + uid + ')';
+          //var providerData = user.providerData;
+          // [START_EXCLUDE]
+          //document.getElementById('quickstart-sign-in-status').textContent = 'Signed in';
+          document.getElementById('quickstart-sign-in').textContent = 'Sign out';
+          document.getElementById('reset_button').disabled = false;
+          document.getElementById('reset_button').textContent = 'Get New Word';
+          $(".letter_choice").show();
+          $("#mystery_word").show();
+          $("#noose").show();
+          //document.getElementById('quickstart-account-details').textContent = JSON.stringify(user, null, '  ');
+          // [END_EXCLUDE]
+        }
+
+        else 
+        {
+          // User is signed out.
+          // [START_EXCLUDE]
+          //document.getElementById('quickstart-sign-in-status').textContent = 'Signed out';
+          document.getElementById('quickstart-sign-in').textContent = 'Sign in with GitHub';
+          document.getElementById('reset_button').disabled = true;
+          document.getElementById('reset_button').textContent = 'Sign in to Play';
+
+          document.getElementById('player_name').textContent = '';
+          $(".letter_choice").hide();
+          $("#mystery_word").hide();
+           $("#noose").hide();
+          //document.getElementById('quickstart-account-details').textContent = 'null';
+          //document.getElementById('quickstart-oauthtoken').textContent = 'null';
+          // [END_EXCLUDE]
+        }
+        // [START_EXCLUDE]
+        document.getElementById('quickstart-sign-in').disabled = false;
+        //document.getElementById('reset_button').disabled = true;
+        //document.getElementById('reset_button').textContent = 'Sign in to Play';
+        // [END_EXCLUDE]
+      });
+      // [END authstatelistener]
+      document.getElementById('quickstart-sign-in').addEventListener('click', toggleSignIn, false);
+    }
+
+    window.onload = function() 
+    {
+      initApp();
+    };
+
+</script>
+
 </head>
 
 <body ng-controller="rootctrl">
 
+<!-- Button that handles sign-in/sign-out -->  <!--class="mdl-button mdl-js-button mdl-button--raised"-->
+
+          <button disabled class="btn btn-warning" id="quickstart-sign-in">Sign in with GitHub</button>
+
+
 <button type="button" id="reset_button" class = "btn btn-danger" ng-click="getword()">Get New Word</button>
 
-    <!--hangman section goes here-->
-    <h1 id = "player_name" class="text-center" ng-bind="playername">Player</h1>
+    <!--hangman section goes here-->          
+    <h1 id = "player_name" class="text-center"></h1> <!--ng-bind="playername"-->
     <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12">
